--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "EventStoreDbConfig": {
+    "ConnectionString": "--REPLACE-WITH-ESDB-CONN-STR--"
+  }
 }
