Adding elastic search to store thre read model into indexed documents

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -11,5 +11,9 @@
 
   "EventStoreDbConfig": {
     "ConnectionString": "--REPLACE-WITH-ESDB-CONN-STR--"
+  },
+
+  "ElasticSearchConfig": {
+    "ServiceURL": "--REPLACE-WITH-ELASTIC-SEARCH-URL--"
   }
 }
