--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,21 @@ services:
       - type: volume
         source: eventstore-volume-logs
         target: /var/log/eventstore
+        
+  elasticsearch.db:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
+    environment:
+      - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    volumes:
+      - type: volume
+        source: elasticsearch-volume-data
+        target: /var/lib/elasticsearch
 
 volumes:
   eventstore-volume-data:
   eventstore-volume-logs:
+  elasticsearch-volume-data:
