Complementing the default implementation for the read model into elastic search

--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -14,6 +14,7 @@
   },
 
   "ElasticSearchConfig": {
-    "ServiceURL": "--REPLACE-WITH-ELASTIC-SEARCH-URL--"
+    "ServiceURL": "--REPLACE-WITH-ELASTIC-SEARCH-URL--",
+    "ApplicationNamePrefix": "--REPLACE-WITH-APP-NAME-PREFIX--"
   }
 }
